<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oxlip</string>
    <string name="title_device_detail">Detail</string>

    <string name="text_top_bar_connected_devices">CONNECTED DEVICES</string>
    <string name="text_peak_use_hour">PEAK USE HOUR</string>
    <string name="text_kw_used">KILOWATTS USED</string>
    <string name="text_na">NA</string>
    <string name="text_0">0</string>

    <string name="text_signal_strength">Signal</string>
    <string name="text_battery_level">Battery</string>

    <string name="text_ma">mA</string>
    <string name="text_watts">Watt</string>
    <string name="text_volt">Volt</string>

    <string name="text_aura">Aura</string>
    <string name="text_lyra">Lyra</string>

    <string name="actionbar_device_name_hint">Appliance Name</string>
    <string name="actionbar_device_delete">Remove</string>
    <string name="actionbar_firmware_update">Update firmware</string>

    <string name="ble_not_supported">BLE is not supported by this Android version.</string>
    <string name="error_bluetooth_not_supported">This phone does not have support for BLE hardware.</string>
    <string name="dl_btn_connect">Connect</string>

    <string name="aura_detail_auto_off">Turn on when motion detected.</string>
    <string name="aura_detail_enable_remote">Enable internet control.</string>

    <string name="lyra_detail_detect_motion">Detect motion.</string>
    <string name="lyra_detail_detect_tap">Detect tap.</string>
    <string name="lyra_detail_drag_and_drop_info">Appliances (Drag and drop on buttons)</string>

    <string name="signout">Sign out</string>
    <string name="facebook_app_id">366802223673857</string>
    <string name="fb_login_protocol_scheme">fb366802223673857</string>
</resources>
