<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_gravity="end">
        <TextView
            android:text="@string/text_signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/dv_rssi"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/text_battery_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/dv_battery_level"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/dv_battery_level_text"
                android:background="#00000000"
                android:layout_alignStart="@id/dv_battery_level"
                android:layout_alignTop="@id/dv_battery_level"
                android:layout_alignEnd="@id/dv_battery_level"
                android:layout_alignBottom="@id/dv_battery_level"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_buttons"
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:scrollbars="horizontal"/>

    <TextView
        android:text="@string/lyra_detail_drag_and_drop_info"
        android:layout_margin="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"/>
</LinearLayout>