<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <GridLayout
            android:rowCount="9"
            android:columnCount="1"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/text_firmware_version"
                        android:paddingEnd="20dp"
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/dd_txt_firmware_version"
                            android:text="@string/text_na"
                            android:layout_gravity="end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/text_signal_strength"
                        android:paddingEnd="20dp"
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/dd_txt_rssi"
                        android:text="@string/text_na"
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/dd_aura_seekbar"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/dd_aura_btn_on_off"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_row="2"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aura_detail_auto_off"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aura_detail_enable_remote"/>
            </LinearLayout>

            <LinearLayout
                android:layout_row="3"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/dd_aura_cs_mw"
                        style="@style/dd_cs_value_text"/>
                    <TextView
                        style="@style/dd_cs_desc_text"
                        android:text="@string/text_mw"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/dd_aura_cs_ma"
                        style="@style/dd_cs_value_text"/>
                    <TextView
                        style="@style/dd_cs_desc_text"
                        android:text="@string/text_ma"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/dd_aura_cs_volt"
                        style="@style/dd_cs_value_text"/>
                    <TextView
                        style="@style/dd_cs_desc_text"
                        android:text="@string/text_volt"/>
                </LinearLayout>

            </LinearLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/ddl_chart"
                android:layout_row="4"
                android:layout_column="0"
                android:minHeight="400dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </GridLayout>

    </ScrollView>
</LinearLayout>